<resources>
    <string name="app_name">iTunes App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="str_artist_name">Artist Name</string>
    <string name="str_search_options">Search options</string>
    <string name="str_track_name">Track name</string>
    <string name="str_coll_name">Collection name</string>
    <string name="str_coll_price">Collection price</string>
    <string name="str_release_date">Track name</string>
    <string name="str_sort_track">Sort by Track Name</string>
    <string name="str_sort_artist">Sort by Artist</string>
    <string name="str_sort_coll_name">Sort by Collection Name</string>
    <string name="str_collection_price">Sort by Collection Price</string>
</resources>