<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ll_shadow"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_sort_coll_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_background"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/str_sort_coll_name"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_sort_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_background"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/str_collection_price"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_sort_track_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_background"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/str_sort_track"
        android:textAppearance="?android:textAppearanceMedium" />

    <TextView
        android:id="@+id/tv_sort_artist_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_background"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/str_sort_artist"
        android:textAppearance="?android:textAppearanceMedium" />

</LinearLayout>